third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/closures/round-trip/bug_16335_split.disassembled.exp
processed 2 tasks
task 0 lines 3-37:  publish [// Bytecode version v8]
Error: error: expected `>`, found `copy`
   ┌─ test:12:26
   │
12 │     call_closure <|| has copy + drop>
   │                          ^^^^


task 1 lines 41-41:  run --verbose 0x42::Test::f3
Error: Function execution failed with VMError: {
    message: Linker Error: Module 0000000000000000000000000000000000000000000000000000000000000042::Test doesn't exist,
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
    exec_state: None,
}
